分类文章列表

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -68,9 +68,10 @@ body {
 }
 
 
-/* Topic Index Page */
+/* Article Index Page */
 
-.articles-index-page {
+.articles-index-page,
+.categories-show-page {
     .article-list {
         .nav>li>a {
             position: relative;
