--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17626,12 +17626,27 @@ body {
 
 /* 回复列表 */
 
-.topic-reply a {
+.article-reply a {
   color: inherit;
 }
 
-.topic-reply .meta {
+.article-reply .meta {
   font-size: 0.9em;
   color: #b3b3b3;
+}
+
+/* 消息通知 */
+
+.notification-badge .badge {
+  font-size: 12px;
+  margin-top: 14px;
+}
+
+.notification-badge .badge-secondary {
+  background-color: #EBE8E8;
+}
+
+.notification-badge .badge-hint {
+  background-color: #d15b47 !important;
 }
 
