--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17650,3 +17650,12 @@ body {
   background-color: #d15b47 !important;
 }
 
+/* User register page */
+
+.register-page img.captcha {
+  cursor: pointer;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+  padding: 3px;
+}
+
