--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -156,3 +156,15 @@ body {
         background-color: #d15b47 !important;
     }
 }
+
+
+/* User register page */
+
+.register-page {
+    img.captcha {
+        cursor: pointer;
+        border: 1px solid #ced4da;
+        border-radius: 4px;
+        padding: 3px;
+    }
+}
